--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
@@ -112,7 +112,7 @@
     </div>
 </div>
 @section CssSpecificVendor {
-    <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
+   @* <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />*@
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
