--- a/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
@@ -109,15 +109,11 @@
                         <label class="col-sm-2 control-label text-sm-right pt-2"></label>
                         <div class="col-sm-9">
 
-                            <table class="table table-responsive-md table-striped mb-0">
+                            <table id="datatable-default" class="table table-responsive-md table-striped mb-0">
+
                                 <thead>
                                     <tr>
-                                        <th colspan="4" class="text-center">Nome dos arquivos anexo</th>
-                                    </tr>
-
-                                    <tr>
                                         <th>Arquivo</th>
-
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -134,12 +130,54 @@
                         </div>
                     </div>
 
-                    <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Classificação do relato <span class="required">*</span></label>
-                        <div class="col-sm-7">
-                            <a href="#modalIcon" class="modal-basic mb-1 mt-1 mr-1 btn btn-primary"><i class="fa fa-plus"></i> </a>
-                        </div>
+                    @*<div class="form-group row">
+            <label class="col-sm-3 control-label text-sm-right pt-2">Classificação do relato <span class="required">*</span></label>
+            <div class="col-sm-7">
+                <a href="#modalIcon" class="modal-basic mb-1 mt-1 mr-1 btn btn-primary"><i class="fa fa-plus"></i> </a>
+            </div>
 
+        </div>*@
+
+                    <div class="form-group">
+                        <label for="inputEmail4">Local da ocorrência <span class="required">*</span></label>
+                        <div class="col-lg-12">
+                            <select class="form-control populate select2" name="ddlLocal" id="ddlLocal"
+                                    title="Por favor selecione o local da ocorrência." required
+                                    asp-for="CodLocal"
+                                    asp-items="Model.ListLocal">
+                                <option value="">Selecionar o local da ocorrência</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="inputEmail4">Sub Local de ocorrência   <span class="required">*</span></label>
+                        <div class="col-lg-12">
+                            <select class="form-control populate select2" name="ddlSubLocal" id="ddlSubLocal"
+                                    title="Por favor selecione o sub local da ocorrência." required
+                                    asp-for="CodSubLocal"
+                                    asp-items="Model.ListSubLocal">
+                                <option value="">Selecionar o sub local da ocorrência</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputEmail4">Assunto <span class="required">*</span></label>
+                        <div class="col-lg-12">
+                            <select data-plugin-selectTwo class="form-control populate">
+                                <option value="AK">Alaska</option>
+                                <option value="HI">Hawaii</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputEmail4">Sub Assunto<span class="required">*</span></label>
+                        <div class="col-lg-12">
+                            <select data-plugin-selectTwo class="form-control populate">
+                                <option value="AK">Alaska</option>
+                                <option value="HI">Hawaii</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
                 <footer class="card-footer">
@@ -219,139 +257,19 @@
 </div>
 @section CssSpecificVendor {
     <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
+    <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
     <link rel="stylesheet" href="~/vendor/datatables/media/css/dataTables.bootstrap4.css" />
 }
 @section Scripts {
+    <script src="~/vendor/datatables/media/js/jquery.dataTables.min.js"></script>
+    <script src="~/vendor/datatables/media/js/dataTables.bootstrap4.min.js"></script>
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
-    <script src="~/vendor/datatables/media/js/jquery.dataTables.min.js"></script>
     <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
+    <script src="~/js/classificarRelato.js"></script>
+    <script src="~/js/formatTable.js"></script>
 
 
-    <script>
-        // Tooltip
-        (function ($) {
-
-            'use strict';
-
-            if ($.isFunction($.fn['tooltip'])) {
-                $('[data-toggle=tooltip],[rel=tooltip]').tooltip({ container: 'body' });
-            }
-
-        }).apply(this, [jQuery]);
-        /*
-Name: 			UI Elements / Modals - Examples
-Written by: 	Okler Themes - (http://www.okler.net)
-Theme Version: 	2.0.0
-*/
-
-        (function ($) {
-
-            'use strict';
-
-            /*
-            Basic
-            */
-            $('.modal-basic').magnificPopup({
-                type: 'inline',
-                preloader: false,
-                modal: true
-            });
-
-            /*
-            Sizes
-            */
-            $('.modal-sizes').magnificPopup({
-                type: 'inline',
-                preloader: false,
-                modal: true
-            });
-
-            /*
-            Modal Dismiss
-            */
-            $(document).on('click', '.modal-dismiss', function (e) {
-                e.preventDefault();
-                $.magnificPopup.close();
-            });
-
-        }).apply(this, [jQuery]);
-
-        // Select2
-            (function ($) {
-
-                'use strict';
-
-                var $select = $(".select2").select2({
-                    allowClear: true
-                });
-
-                $(".select2").each(function () {
-                    var $this = $(this),
-                        opts = {};
-
-                    var pluginOptions = $this.data('plugin-options');
-                    if (pluginOptions)
-                        opts = pluginOptions;
-
-                    $this.themePluginSelect2(opts);
-                });
-
-            /*
-             * When you change the value the select via select2, it triggers
-             * a 'change' event, but the jquery validation plugin
-             * only re-validates on 'blur'*/
-
-            $select.on('change', function() {
-                $(this).trigger('blur');
-            });
-
-
-                $("#ddlLocal").change(function () {
-
-                    var url = "GetSubLocalByUnidade";
-
-                    var ddlSource = "#ddlLocal";
-
-                    $.getJSON(url,
-                        { id: $(ddlSource).val() },
-                        function (data) {
-                            var items = '';
-                            $("#ddlSubLocal").empty;
-                            $.each(data,
-                                function (i, row) {
-                                    items += "<option value='" + row.value + "'>" + row.text + "</option>";
-                                });
-                            $("#ddlSubLocal").html(items);
-                        });
-                });
-
-            $('#form').validate({
-                ignore: 'input[type=hidden], .select2-input, .select2-focusser'
-            });
-
-            $select.rules('add', 'required');
-
-                // checkbox, radio and selects
-                $("#chk-radios-form, #form").each(function() {
-                    $(this).validate({
-                        highlight: function(element) {
-                            $(element).closest('.form-group').removeClass('has-success').addClass('has-error');
-                        },
-                        success: function(element) {
-                            $(element).closest('.form-group').removeClass('has-error');
-                        }
-                    });
-                });
-
-                @*$('#ddlUnidadeInfraestrutura').val(@Model.ListUnidadeInfraestrutura.SelectedValue);
-                $('#ddlUnidadeInfraestrutura').trigger('change');*@
-
-
-
-        }).apply(this, [jQuery]);
-         
-    </script>
     <script>
 
         var notify = @ViewBag.NotifyMessage;
