--- a/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Cancel.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model Infraero.Relprev.CrossCutting.Models.RelatoModel
+@inject Microsoft.Extensions.Configuration.IConfiguration configuration
 @{
     ViewData["Title"] = "Cancel";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -19,6 +20,7 @@
                     <h2 class="card-title">Cancelar Relato de Prevenção</h2>
 
                 </header>
+
                 <div class="card-body">
                     <div class="form-group row">
                         <label class="col-lg-3 control-label text-sm-right pt-2">Nº do relato </label>
@@ -27,7 +29,8 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input readonly id="CodRelato" name="CodRelato" value="@Model.Relato.NumRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
+                                <input type="hidden" id="CodRelato" name="CodRelato" value="@Model.Relato.CodRelato">
+                                <input readonly id="CodNumRelato" name="CodNumRelato" value="@Model.Relato.NumRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
                             </div>
                         </div>
                     </div>
